Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>The singularity has four legs and is 750mm high</p>
 
-<p><img src="https://raw.githubusercontent.com/opendesk/smartdesk/master/images/unit_table.jpg" alt="image of unit table"></p>
+<p><img src="http://github.com/opendesk/smartdesk/blob/master/images/unit_table.jpg" alt="image of unit table"></p>
 
 <p>Smartdesk is an umbrella project pulling together the thinking at Opendesk about the uses of computing within our furniture. This work to date has involved many outside Opendesk and we want to continue designing smartdesk with our partners and collaborators, makers and technologists, and anyone interested in putting together tech and plywood. </p>
 
@@ -63,7 +63,7 @@
 
 <p>Physical integration of computing hardware into furniture.</p>
 
-<p><a href="/specs/hardware_interface_spec.md">hardware interface spec</a></p>
+<p><a href="https://github.com/opendesk/smartdesk/blob/master/specs/hardware_interface_spec.md">hardware interface spec</a></p>
 
 <p><a href="https://github.com/opendesk/smartdesk/issues/1">hardware interface issue</a></p>
 
@@ -72,7 +72,7 @@
 
 <p>Customisation of furniture to accommodate accessories.</p>
 
-<p><a href="/specs/component_interface_spec.md">component interface spec</a></p>
+<p><a href="https://github.com/opendesk/smartdesk/blob/master/specs/component_interface_spec.md">component interface spec</a></p>
 
 <p><a href="https://github.com/opendesk/smartdesk/issues/2">component interface issue</a></p>
 
@@ -81,7 +81,7 @@
 
 <p>Identity of furniture to facilitate integration of technology.</p>
 
-<p><a href="/specs/furniture_identity_spec.md">furniture identity spec</a></p>
+<p><a href="https://github.com/opendesk/smartdesk/blob/master/specs/furniture_identity_spec.md">furniture identity spec</a></p>
 
 <p><a href="https://github.com/opendesk/smartdesk/issues/3">furniture identity issue</a></p>
 
@@ -90,14 +90,14 @@
 
 <p>Curation of projects, software and documentation.</p>
 
-<p><a href="/specs/project_curation_spec.md">project curation spec</a></p>
+<p><a href="https://github.com/opendesk/smartdesk/blob/master/specs/project_curation_spec.md">project curation spec</a></p>
 
 <p><a href="https://github.com/opendesk/smartdesk/issues/4">project curation issue</a></p>
 
 <h2>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h2>
 
-<p><a href="/projects/project_list.md">Some current projects</a></p>
+<p><a href="https://github.com/opendesk/smartdesk/blob/master/projects/project_list.md">Some current projects</a></p>
         </section>
 
         <aside id="sidebar">
