Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>The singularity has four legs and is 750mm high</p>
 
-<p><img src="http://github.com/opendesk/smartdesk/blob/master/images/unit_table.jpg" alt="image of unit table"></p>
+<p><img src="https://raw.githubusercontent.com/opendesk/smartdesk/master/images/unit_table.jpg" alt="image of unit table"></p>
 
 <p>Smartdesk is an umbrella project pulling together the thinking at Opendesk about the uses of computing within our furniture. This work to date has involved many outside Opendesk and we want to continue designing smartdesk with our partners and collaborators, makers and technologists, and anyone interested in putting together tech and plywood. </p>
 
