--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
 
-<p><img src="https://raw.githubusercontent.com/opendesk/smartdesk/master/images/unit_table.jpg" alt="image of unit table"></p>
+<p><img src="https://raw.githubusercontent.com/opendesk/smartdesk/master/images/unit_table.jpg" alt="image of table"></p>
 
 <p>Smartdesk is an umbrella project pulling together the thinking at Opendesk about the uses of computing within our furniture. This work to date has involved many outside Opendesk and we want to continue designing smartdesk with our partners and collaborators, makers and technologists, and anyone interested in putting together tech and plywood. </p>
 
@@ -37,7 +37,7 @@
 
 <p>In each area we are developing specs. We are thinking about what would be most useful to provide or specify to facilitate a wide range of collaborators and diverse projects: tight enough to be useful and loose enough to be accommodating.</p>
 
-<ul>
+<ol>
 <li>
 <strong>Hardware Interface</strong>  - Physical integration of computing hardware into furniture.</li>
 <li>
@@ -46,7 +46,7 @@
 <strong>Furniture Identity</strong> - Identity of furniture to facilitate integration of technology.</li>
 <li>
 <strong>Project Curation</strong> - Curation of projects, software and documentation.</li>
-</ul>
+</ol>
 
 <p>This repo serves as a home for the specs Opendesk are developing in each area and a point for discussion and collaboration on their development. Each has a markdown document containing the spec and an issue as a starting point for discussion. Any additional resources, designs, code binaries etc can go in the <code>resources/*</code> folders.</p>
 
