--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <p>Smartdesk is an umbrella project pulling together the thinking at Opendesk about the uses of computing within our furniture. This work to date has involved many outside Opendesk and we want to continue designing smartdesk with our partners and collaborators, makers and technologists, and anyone interested in putting together tech and plywood. </p>
 
+<p>The plan is to use the <a href="https://github.com/opendesk/smartdesk/issues">issues</a> in this project freely, a bit as you would forums posts for discussion, so that anyone can participate.</p>
+
 <p>We have identified four principal areas of our work that are generic and span many possible projects and desirable applications of a smart desk.</p>
 
 <p>In each area we are developing specs. We are thinking about what would be most useful to provide or specify to facilitate a wide range of collaborators and diverse projects: tight enough to be useful and loose enough to be accommodating.</p>
@@ -48,8 +50,6 @@
 </ul>
 
 <p>This repo serves as a home for the specs Opendesk are developing in each area and a point for discussion and collaboration on their development. Each has a markdown document containing the spec and an issue as a starting point for discussion. Any additional resources, designs, code binaries etc can go in the <code>resources/*</code> folders.</p>
-
-<p>The plan is to use <a href="https://github.com/opendesk/smartdesk/issues">issues</a> freely, a bit as you would forums posts for discussion, with the added advantage of rich linking to docs and code.</p>
 
 <p><strong>Projects</strong></p>
 
